--- a/composer.json
+++ b/composer.json
@@ -12,6 +12,8 @@
         }
     ],
     "require": {
-        "spekulatius/phpscraper": "^3.0"
+        "spekulatius/phpscraper": "^3.0",
+        "vlucas/phpdotenv": "^5.6",
+        "ext-curl": "*"
     }
 }
